--- a/app/src/main/res/layout/activity_edit_details.xml
+++ b/app/src/main/res/layout/activity_edit_details.xml
@@ -8,6 +8,17 @@
     android:background="#eeeeee"
     tools:context=".profileedit.EditDetailsActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_back_arrow"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="15dp"
+        android:elevation="5dp"
+        android:id="@+id/back"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
