--- a/app/src/main/res/layout/activity_on_going_booking.xml
+++ b/app/src/main/res/layout/activity_on_going_booking.xml
@@ -30,7 +30,16 @@
         android:fontFamily="@font/roboto_medium"
         android:textColor="#999999"/>
 
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    android:id="@+id/empty"
+    android:text="No ongoing booking available"
+    android:textColor="@color/colorPrimary"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gL"
