--- a/app/src/main/res/layout/activity_service_details.xml
+++ b/app/src/main/res/layout/activity_service_details.xml
@@ -8,6 +8,26 @@
     android:background="#777777"
     tools:context=".services.ServiceDetailsActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_back_arrow"
+        android:backgroundTint="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="15dp"
+        android:id="@+id/back"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/back"
+        app:layout_constraintLeft_toRightOf="@id/back"
+        android:layout_marginLeft="25dp"
+        android:text="Service details"
+        app:layout_constraintBottom_toBottomOf="@id/back"
+        android:textColor="@color/white"
+        android:textSize="18sp"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
