--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -64,6 +64,14 @@
             app:layout_constraintRight_toRightOf="@id/gR"
             app:layout_constraintTop_toBottomOf="@id/cartTxt" />
 
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/loader"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
