--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,4 +15,16 @@
         <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/white</item>
 
     </style>
+
+    <style name="AppSearchView" parent="Widget.AppCompat.SearchView">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColorHint">#A1B1BD</item>
+        <item name="android:editTextColor">#A1B1BD</item>
+        <item name="colorAccent">#A1B1BD</item>
+    </style>
+
+    <style name="CustomDialog" parent="android:Theme.Dialog">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/white</item>
+    </style>
 </resources>
