back press handled

--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -374,6 +374,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:text="My bookings"
+                        android:padding="5dp"
                         android:textColor="#0DD3F1"
                         android:foreground="?attr/selectableItemBackground"
                         app:layout_constraintBottom_toBottomOf="@id/servicesIcon"
@@ -406,6 +407,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="Contact us"
                         android:textColor="#0DD3F1"
+                        android:padding="5dp"
                         android:foreground="?attr/selectableItemBackground"
                         app:layout_constraintBottom_toBottomOf="@id/contactUsIcon"
                         app:layout_constraintLeft_toRightOf="@id/servicesIcon"
@@ -436,6 +438,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Logout"
+                        android:padding="5dp"
                         android:foreground="?attr/selectableItemBackground"
                         android:textColor="#0DD3F1"
                         app:layout_constraintBottom_toBottomOf="@id/logoutIcon"
