--- a/app/src/main/res/layout/activity_checkout_cart.xml
+++ b/app/src/main/res/layout/activity_checkout_cart.xml
@@ -14,8 +14,8 @@
         android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/gL"
         android:background="@drawable/ic_back_arrow"
