--- a/app/src/main/res/layout/activity_service_details.xml
+++ b/app/src/main/res/layout/activity_service_details.xml
@@ -9,8 +9,8 @@
     tools:context=".services.ServiceDetailsActivity">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:background="@drawable/ic_back_arrow"
         android:backgroundTint="@color/white"
         app:layout_constraintTop_toTopOf="parent"
