--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -107,10 +107,8 @@
                     app:layout_constraintVertical_bias="0.65" />
 
                 <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/redeemBtn"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
-                    android:visibility="invisible"
                     app:cardBackgroundColor="@color/colorPrimary"
                     app:layout_constraintBottom_toBottomOf="parent">
 
@@ -118,7 +116,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Redeem"
+                        android:text="Note: 1 point = ₹1"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
                 </com.google.android.material.card.MaterialCardView>
