--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -8,6 +8,14 @@
     android:background="@color/white"
     tools:context=".gallery.GalleryActivity">
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/loader"/>
     <androidx.constraintlayout.widget.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,66 +30,19 @@
         android:orientation="vertical"
         android:id="@+id/gR"/>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.15"
-        android:orientation="horizontal"
-        android:id="@+id/gT"/>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.55"
-        android:orientation="horizontal"
-        android:id="@+id/gB"/>
 
-    <com.github.chrisbanes.photoview.PhotoView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/gT"
-        app:layout_constraintBottom_toBottomOf="@id/gB"
-        app:layout_constraintLeft_toLeftOf="@id/gL"
-        app:layout_constraintRight_toRightOf="@id/gR"
-        android:scaleType="centerCrop"
-        android:background="@drawable/ic_image_placeholder"
-        android:id="@+id/galleryImg"/>
     
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         app:layout_constraintLeft_toLeftOf="@id/gL"
         app:layout_constraintRight_toRightOf="@id/gR"
-        app:layout_constraintTop_toBottomOf="@id/gB"
+        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/galleryRecyclerView"
         android:layout_marginTop="25dp"/>
 
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        app:cardCornerRadius="30dp"
-        app:cardBackgroundColor="#FAFAFA"
-        app:layout_constraintLeft_toLeftOf="@id/gL"
-        app:layout_constraintRight_toRightOf="@id/gR"
-        android:id="@+id/cross"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:backgroundTint="#CCCCCC"
-                android:background="@drawable/ic_cross"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
