--- a/app/src/main/res/layout/gallery_view_layout.xml
+++ b/app/src/main/res/layout/gallery_view_layout.xml
@@ -4,6 +4,7 @@
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:layout_marginRight="15dp"
+    android:layout_marginBottom="15dp"
     android:background="@color/white">
 
     <ImageView
